syntax = "proto3";

option java_multiple_files = true;
option java_package = "ovaphlow.himawari.service.data";
option java_outer_classname = "CommonProto";

package common;

service Common {
    rpc list (CommonRequest) returns (CommonReply) {}
    rpc save (CommonRequest) returns (CommonReply) {}
    rpc get (CommonRequest) returns (CommonReply) {}
    rpc update (CommonRequest) returns (CommonReply) {}
    rpc remove (CommonRequest) returns (CommonReply) {}
}

message CommonRequest { string data = 1; }

message CommonReply { string data = 1; }
