syntax = "proto3";

option java_package = "ovaphlow.himawari.service.data";
option java_outer_classname = "SettingProto";

package himawari;

service Setting {
    rpc List (ListRequest) returns (SettingReply) {}
    rpc Save (SaveRequest) returns (SettingReply) {}
    rpc Get (GetRequest) returns (SettingReply) {}
    rpc Update (UpdateRequest) returns (SettingReply) {}
    rpc Remove (RemoveRequest) returns (SettingReply) {}
}

message ListRequest {
    string cat = 1;
}

message SaveRequest {
    string uuid = 1;
    uint32 master_id = 2;
    string category = 3;
    string name = 4;
    string value = 5;
    string doc = 6;
}

message GetRequest {
    uint32 id = 1;
    string uuid = 2;
}

message UpdateRequest {
    uint32 id = 1;
    string uuid = 2;
    uint32 master_id = 3;
    string category = 4;
    string name = 5;
    string value = 6;
    string doc = 7;
}

message RemoveRequest {
    uint32 id = 1;
    string uuid = 2;
}

message SettingReply {
    string data = 1;
}
